# routes/api-docs/apiswagger.yaml
@@ -302,7 +302,7 @@ paths:
         type: integer  
       - name: count
         in: path
-        description: The current transactions list summary count transaction
+        description: The current transactions list summary count transaction max 50
         required: true
         type: integer  
       responses:
@@ -311,7 +311,40 @@ paths:
           schema:
             $ref: '#/definitions/transactionsList'
         '500':
-          description: Service unavialable            
+          description: Service unavialable
+  /api/v4.2/BTC/getTransactionsListByRand/{address}/{from}/{count}:
+    get:
+      tags:
+      - getTransactionsList by rand
+      summary: Get address transactions by rand min value from 0, max value count = 50
+      operationId: getTransactionsList
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: address
+        in: path
+        description: The address for BTC wallet
+        required: true
+        type: string
+      - name: from
+        in: path
+        description: The current transactions list from transaction
+        required: true
+        type: integer  
+      - name: count
+        in: path
+        description: The current transactions list summary count transaction max 50
+        required: true
+        type: integer  
+      responses:
+        '200':
+          description: Success execute
+          schema:
+            $ref: '#/definitions/transactionsList'
+        '500':
+          description: Service unavialable                     
   /api/v4.2/ETH/getTransactionsList/{address}:
     get:
       tags:
